source/stylesheets/_components.container.sass
.Container
  position: relative
  margin: 0 auto
  max-width: 920px
  padding-left: 8px
  padding-right: 8px
  +respond-to(small-up)
    width: 90%
    padding-left: 0
    padding-right: 0

.Primary
  padding-top: 60px
  +respond-to(ipad-up)
    padding-top: 80px

